--- a/2/2_25.ipynb
+++ b/2/2_25.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "Число $ \\varepsilon = c / a $ называется эксцентриситетом гиперболы. Из определения $ \\varepsilon > 1 $, при этом $$ \\varepsilon = \\sqrt{1 + \\frac{b^2}{a^2}}, \\space\\space\\space\\space \\frac{b}{a} = \\sqrt{\\varepsilon^2 - 1} $$\n",
     "\n",
-    "И $$ \\begin{cases}r_1 = -(a + \\varepsilon x) \\newline r_2 = -(a - \\varepsilon x) \\end{cases} \\space\\space\\space\\space \\begin{cases}r_1 = a + \\varepsilon x \\newline \\newline r_2 = \\varepsilon x - a \\end{cases}$$\n",
+    "И $$ \\begin{cases}r_1 = -(a + \\varepsilon x) \\newline r_2 = -(a - \\varepsilon x) \\end{cases} $$ $$\\begin{cases}r_1 = a + \\varepsilon x \\newline r_2 = \\varepsilon x - a \\end{cases}$$\n",
     "\n",
     "Для левой и праой ветвей соответсвенно."
    ]
