Added all questions in calculus and corrected some mistakes

--- a/Calculus/1st-Semester/Lectures/25.ipynb
+++ b/Calculus/1st-Semester/Lectures/25.ipynb
@@ -42,21 +42,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. $ f^{(n)}(x) = e^x \\forall n = 0, 1,.. $, то $ f^{(n)}(0) = 1 \\Rightarrow e^x = 1 + x + \\frac{x^2}{2!}  + \\frac{x^3}{3!} + \\dots + \\frac{n^2}{n!} + R_{n+1}(x) $, где $ R_{n+1} = \\frac{e^{\\theta x}}{(n + 1)!} \\cdot x^{n + 1} $"
+    "1. $ f^{(n)}(x) = e^x \\forall n = 0, 1,.. $, то $ f^{(n)}(0) = 1 \\Rightarrow e^x = 1 + x + \\frac{x^2}{2!}  + \\frac{x^3}{3!} + \\dots + \\frac{n^2}{n!} + R_{n+1}(x) $, где $ R_{n+1}(x) = \\frac{e^{\\theta x}}{(n + 1)!} \\cdot x^{n + 1} $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. $ f(x) = sin (x) $ Поскольку $ (sin \\ x)' = sin (x  +\\frac{\\pi}{2}) $, то $ f^{n}(x) = \\begin{cases} 0 &, n = 2k \\\\ (-1)^k &, n = 2k + 1 \\end{cases} \\Rightarrow sin \\ x = 1 - \\frac{1}{x^3} + \\frac{1}{x^5} + \\dots + \\frac{1}{x^{2n + 1}} + R_{n + 1}(x) $"
+    "2. $ f(x) = sin (x) $ Поскольку $ (sin \\ x)' = sin (x  +\\frac{\\pi}{2}) $, то $ f^{n}(x) = \\begin{cases} 0 &, n = 2k \\newline (-1)^k &, n = 2k + 1 \\end{cases} \\Rightarrow sin \\ x = 1 - \\frac{1}{x^3} + \\frac{1}{x^5} + \\dots + \\frac{1}{x^{2n + 1}} + R_{n + 1}(x) $  \n",
+    "\n",
+    "   $ R_{n + 1}(x) = \\frac{x^{n + 2}}{(n + 2)!}\\sin (\\theta_1 x + \\pi + \\frac{\\pi n}{2}), \\theta \\in (0, 1) $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ \\cdots $"
+    "3. $ f(x) = \\cos x $. Поскольку $ f^{(n)}(x) = \\cos (x + \\frac{\\pi n}{2}) $, то $ f^{(n)}(0) = \\cos(\\frac{\\pi n}{2}) = \\begin{cases} (-1)^k, &n=2k, k = 1, 2, \\dots \\newline 0, &n = 2k + 1, k = 0, 1\\dots \\end{cases} $  \n",
+    "\n",
+    "   $ \\cos x = 1 - \\frac{x^2}{2!} + \\frac{x^4}{4!} - \\frac{x^6}{6!} + \\dots + \\frac{(-1)^kx^{2k}}{(2k)!} + R_{n + 2}(x) $, где $ R_{n + 2}(x) = \\frac{x^{n + 2}}{(n + 2)!} \\cos (\\theta_1 x + \\pi + \\frac{\\pi n}{2}), \\theta_1 \\in (0, 1) $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. $ f(x) = \\ln(1 + x) $. Поскольку $ f^{(n)} = \\frac{(-1)^n (n - 1)!}{(x + 1)^n} $, то $ f(0) = 0, f^{(n)} = (-1)^n(n - 1)! $\n",
+    "\n",
+    "   $ \\ln(1 + x) = x - \\frac{x^2}{2} + \\frac{x^3}{3} - \\frac{x^4}{4} + \\dots + \\frac{(-1)^{n - 1}x^n}{n} + R_{n + 1}(x) $, где $ R_{n + 1}(x) = \\frac{(-1)^{n}x^{n + 1}}{(n + 1)(1 + \\theta_1 x)^{n + 1}} = \\frac{(-1)^n (1 - \\theta_2)^n x^{n + 1}}{(1 + \\theta_2 x)^{n + 1}}, \\space \\theta_1, \\theta_2 \\in (0, 1) $"
    ]
   },
   {
