--- a/Calculus/1st-Semester/Lectures/26_27.ipynb
+++ b/Calculus/1st-Semester/Lectures/26_27.ipynb
@@ -22,11 +22,11 @@
    "source": [
     "#### Теорема 1\n",
     "\n",
-    "Если $ F_1, F_2 $ - первообразные для $ f $ на $ (a, b) $ то $ F_1(x) - F_2(x) = C \\ \\ \\forall x \\in (a, b) $\n",
+    "Если $ F_1, F_2 $ - первообразные для $ f $ на $ (a, b) $ то $ F_1(x) - F_2(x) = C \\space\\space \\forall x \\in (a, b) $\n",
     "\n",
     "#### Доказательство\n",
     "\n",
-    "По определению $ F_1'(x) = f(x), F_2'(x) = f(x) \\ \\ \\forall x \\in (a, b) \\Rightarrow (F_1(x) - F_2(x))' = 0 \\Rightarrow F_1(x) - F_2(x) = C \\ \\ \\forall x \\in (a, b) $ (по теоереме Лагранжа)"
+    "По определению $ F_1'(x) = f(x), F_2'(x) = f(x) \\space\\space \\forall x \\in (a, b) \\Rightarrow (F_1(x) - F_2(x))' = 0 \\Rightarrow F_1(x) - F_2(x) = C \\space\\space \\forall x \\in (a, b) $ (по теореме Лагранжа)"
    ]
   },
   {
@@ -42,9 +42,9 @@
    "source": [
     "#### Определение 2\n",
     "\n",
-    "Неопределенный интеграл от фнкции $ f $ на $ (a, b) $ называется множество всех первообразных функции на данном промежутке.\n",
+    "Неопределенный интеграл от функции $ f $ на $ (a, b) $ называется множество всех первообразных функции на данном промежутке.\n",
     "\n",
-    "Обозначается как $ \\int \\! f(x) \\, \\mathrm{d}x $, где $ \\int $ - знак интеграла, $ f(x) \\, \\mathrm{d}x $ - подынтегральное выражение, $ f(x) $ подынтегральная функция, $ dx $ - дифференциал. Если $ F $ - любая первообразная для $ f $ на $ (a, b) $, то пишут $ \\in \\! f(x)dx = F + C $ - равенство понимается как равенство множеств."
+    "Обозначается как $ \\int \\! f(x) \\, \\mathrm{d}x $, где $ \\int $ - знак интеграла, $ f(x) \\, \\mathrm{d}x $ - подынтегральное выражение, $ f(x) $ подынтегральная функция, $ dx $ - дифференциал. Если $ F $ - любая первообразная для $ f $ на $ (a, b) $, то пишут $ \\int \\! f(x)dx = F + C $ - равенство понимается как равенство множеств."
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Теоерема 3\n",
+    "#### Теорема 3\n",
     "\n",
     "Пусть функции $ f, g $ лифференцируемы на $ (a, b) $. Если функция $ f' \\cdot g $ имеет на $ (a, b) $ первообразную, то и $ f \\cdot g' $ имеет на $ (a, b) $ первообразную, причём  \n",
     "$ \\int f(x)g'(x)dx = f(x)g(x) - \\int f'(x)g(x)dx $ - формула интегрирования по частям\n",
