Added first lecture in calculus, fixed some folders

--- a/Calculus/1st-Semester/Exam/2. Приближение вещественных чисел рациональными.ipynb
+++ b/Calculus/1st-Semester/Exam/2. Приближение вещественных чисел рациональными.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Если $ a < b \\leqslant 0 $, то $ 0 \\leqslant |b| < |a| \\Rightarrow \\space \\exists \\hat{d} \\in \\mathbb{Q} $, т.ч. $ |b| < \\hat{d} < |a| \\Rightarrow a < -\\hat{d} < b $.\n",
     "\n",
-    "Следствие: между любыми двумя не варными вещественными числами можно поместить бесконечно много рациональных."
+    "Следствие: между любыми двумя не равными вещественными числами можно поместить бесконечно много рациональных."
    ]
   },
   {
@@ -33,13 +33,13 @@
    "source": [
     "### Лемма 2\n",
     "\n",
-    "Пусть $ d \\in \\mathbb{R}, \\forall \\varepsilon \\in \\mathbb{Q}, \\varepsilon > 0, \\space \\exists \\alpha, \\beta \\in \\mathbb{Q} $, т.ч. $ d \\leqslant \\alpha \\leqslant \\beta, \\beta - d = \\varepsilon $\n",
+    "Пусть $ \\alpha \\in \\mathbb{R}, \\forall \\varepsilon \\in \\mathbb{Q}, \\varepsilon > 0, \\space \\exists a, b \\in \\mathbb{Q} $, т.ч. $ a \\leqslant \\alpha \\leqslant b, b - a < \\varepsilon $\n",
     "\n",
     "### Доказательство\n",
     "\n",
-    "Пусть $ \\alpha \\leqslant 0 $. Возьмём $ \\forall \\varepsilon \\in \\mathbb{Q}, \\varepsilon > 0 $. Согласно аксиоме Архимеда $ \\exists n \\in \\mathbb{N}, 10^n > \\frac{1}{\\varepsilon} $. Тогда $ \\varepsilon > \\frac{1}{10^n} $. Положим $ d = a_0, a_1 \\dots a_n00\\dots, \\beta = d + \\frac{1}{10^n} \\Rightarrow d \\leqslant \\alpha, \\beta \\geqslant \\alpha, \\beta - \\alpha = \\frac{1}{10^n} < \\varepsilon $.\n",
+    "Пусть $ \\alpha \\geqslant 0 $. Возьмём $ \\forall \\varepsilon \\in \\mathbb{Q}, \\varepsilon > 0 $. Согласно аксиоме Архимеда $ \\exists n \\in \\mathbb{N}, 10^n > \\frac{1}{\\varepsilon} $. Тогда $ \\varepsilon > \\frac{1}{10^n} $. Положим $ a = a_0, a_1 \\dots a_n00\\dots, b = a + \\frac{1}{10^n} \\Rightarrow a \\leqslant \\alpha, b \\geqslant \\alpha, b - a = \\frac{1}{10^n} < \\varepsilon $.\n",
     "\n",
-    "Если $ \\alpha < 0 $, то $ |\\alpha| > 0 \\Rightarrow \\space \\exists \\hat{d}, \\hat{\\beta} \\in \\mathbb{Q} $, т.ч. $ \\hat{d} \\leqslant |\\alpha| \\leqslant \\hat{\\beta}, \\hat{\\beta} - \\hat{\\alpha} < \\varepsilon $. Теперь $ d = -\\hat{\\beta}, \\beta = -\\hat{\\alpha} $"
+    "Если $ \\alpha < 0 $, то $ |\\alpha| > 0 \\Rightarrow \\space \\exists \\hat{a}, \\hat{b} \\in \\mathbb{Q} $, т.ч. $ \\hat{a} \\leqslant |\\alpha| \\leqslant \\hat{b}, \\hat{b} - \\hat{a} < \\varepsilon $. Теперь $ a = -\\hat{b}, b = -\\hat{a} $"
    ]
   },
   {
@@ -48,11 +48,11 @@
    "source": [
     "### Лемма 3\n",
     "\n",
-    "Пусть $ a, b\\in \\mathbb{R} $. Если $ \\forall \\varepsilon > 0, \\varepsilon \\in \\mathbb{Q} \\space \\exists \\gamma_1, \\gamma_2 \\in \\mathbb{Q} $, т.ч. $ \\gamma_1 \\leqslant a \\leqslant_2, \\gamma_1 \\leqslant b \\leqslant \\gamma_2  $, причём $ \\gamma_2 - \\gamma_1 < \\varepsilon $, то $ a = b $\n",
+    "Пусть $ a, b\\in \\mathbb{R} $. Если $ \\forall \\varepsilon > 0, \\varepsilon \\in \\mathbb{Q} \\space \\exists \\gamma_1, \\gamma_2 \\in \\mathbb{Q} $, т.ч. $ \\gamma_1 \\leqslant a \\leqslant \\gamma_2, \\gamma_1 \\leqslant b \\leqslant \\gamma_2  $, причём $ \\gamma_2 - \\gamma_1 < \\varepsilon $, то $ a = b $\n",
     "\n",
     "### Доказательство\n",
     "\n",
-    "Предположим $ a \\neq b, a < b $ ($ a > b $ аналогично). Согласно Лемме 1 $ \\exists \\alpha_1, \\alpha_2: a < \\alpha_2 < \\alpha_2 < b. \\varepsilon > 0 \\Rightarrow \\space \\exists \\gamma_1, \\gamma_2 \\in \\mathbb{Q}: \\gamma_1 \\leqslant a < \\alpha_2 < \\alpha_2 < b \\leqslant \\gamma_2 $, причём $ \\gamma_2 - \\gamma_1 < \\varepsilon $. Тогда $ \\gamma_1 < \\alpha_1 < \\alpha_2 < \\gamma_2 \\Rightarrow 0 < \\alpha_2 - \\alpha_1 < \\gamma_2  - \\gamma_1 < \\varepsilon $. Это справедливо для $ \\forall \\varepsilon > 0, \\varepsilon \\in  \\mathbb{Q} $. Положим $ \\varepsilon = \\frac{\\alpha_2 - \\alpha_1}{2} $. Получим, что $ 0 M \\alpha_2 - \\alpha_1 < \\frac{\\alpha_2 - \\alpha_1}{2} $"
+    "Предположим $ a \\neq b, a < b $ ($ a > b $ аналогично). Согласно Лемме 1 $ \\exists \\alpha_1, \\alpha_2: a < \\alpha_1 < \\alpha_2 < b. \\space\\space \\varepsilon > 0 \\Rightarrow \\space \\exists \\gamma_1, \\gamma_2 \\in \\mathbb{Q}: \\gamma_1 \\leqslant a < \\alpha_2 < \\alpha_2 < b \\leqslant \\gamma_2 $, причём $ \\gamma_2 - \\gamma_1 < \\varepsilon $. Тогда $ \\gamma_1 < \\alpha_1 < \\alpha_2 < \\gamma_2 \\Rightarrow 0 < \\alpha_2 - \\alpha_1 < \\gamma_2  - \\gamma_1 < \\varepsilon $. Это справедливо для $ \\forall \\varepsilon > 0, \\varepsilon \\in  \\mathbb{Q} $. Положим $ \\varepsilon = \\frac{\\alpha_2 - \\alpha_1}{2} $. Получим, что $ \\alpha_2 - \\alpha_1 < \\frac{\\alpha_2 - \\alpha_1}{2} $. Противоречие."
    ]
   },
   {
