--- a/Calculus/1st-Semester/Exam/20. Понятие производной и дифференцируемости функции в точке.ipynb
+++ b/Calculus/1st-Semester/Exam/20. Понятие производной и дифференцируемости функции в точке.ipynb
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Левой (правой) производной функции $ f $ в точке $ x_0 $ называется выражение $ f_-'(x+0) = \\lim\\limits_{\\Delta x \\to 0 - 0} \\frac{f(x_0 + \\Delta x) - f(x_0)}{\\Delta x} $  \n",
+    "Левой (правой) производной функции $ f $ в точке $ x_0 $ называется выражение $ f_-'(x) = \\lim\\limits_{\\Delta x \\to 0 - 0} \\frac{f(x_0 + \\Delta x) - f(x_0)}{\\Delta x} $  \n",
     "\n",
-    "$ f_+'(x+0) = \\lim\\limits_{\\Delta x \\to 0 + 0} \\frac{f(x_0 + \\Delta x) - f(x_0)}{\\Delta x} $"
+    "$ f_+'(x) = \\lim\\limits_{\\Delta x \\to 0 + 0} \\frac{f(x_0 + \\Delta x) - f(x_0)}{\\Delta x} $"
    ]
   },
   {
@@ -108,9 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ \\Rightarrow \\Delta f  = A\\Delta x + a(\\Delta x)\\cdot \\Delta x \\Rightarrow \\lim\\limits{\\Delta x \\to 0} \\frac{\\Delta f}{\\Delta x} = \\lim\\limits{\\Delta x \\to 0} (A + a(\\Delta x)) = A \\Rightarrow \\exists f'(x_0) = A $  \n",
+    "$ \\Rightarrow \\Delta f  = A\\Delta x + a(\\Delta x)\\cdot \\Delta x \\Rightarrow \\lim\\limits_{\\Delta x \\to 0} \\frac{\\Delta f}{\\Delta x} = \\lim\\limits_{\\Delta x \\to 0} (A + a(\\Delta x)) = A \\Rightarrow \\exists f'(x_0) = A $  \n",
     "\n",
-    "$ \\Leftarrow $ Пусть $ \\lim\\limits{\\Delta x \\to 0} \\frac{\\Delta f}{\\Delta x} = f'(x_0) \\Rightarrow \\left ( \\frac{\\Delta f}{\\Delta x} - f'(x_0) \\right ) \\to 0 \\Rightarrow \\frac{\\Delta f}{\\Delta x} - f'(x_0) = a(\\Delta x), $ где $ a(\\Delta x) \\to 0 \\Rightarrow \\Delta f = A \\cdot \\Delta x + a(\\Delta x)\\cdot \\Delta x $ "
+    "$ \\Leftarrow $ Пусть $ \\lim\\limits_{\\Delta x \\to 0} \\frac{\\Delta f}{\\Delta x} = f'(x_0) \\Rightarrow \\left ( \\frac{\\Delta f}{\\Delta x} - f'(x_0) \\right ) \\to 0 \\Rightarrow \\frac{\\Delta f}{\\Delta x} - f'(x_0) = a(\\Delta x), $ где $ a(\\Delta x) \\to 0 \\Rightarrow \\Delta f = A \\cdot \\Delta x + a(\\Delta x)\\cdot \\Delta x $ "
    ]
   },
   {
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ \\Delta f  =f(x_0 + \\Delta x) - f(x_)) = f'(x_0)\\Delta x + a(\\Delta x)\\Delta x\\to 0 \\Rightarrow f(x_0 + \\Delta x) \\to f(x_0) $, т.е. функция непрерывна в точке $ x_0 $"
+    "$ \\Delta f  =f(x_0 + \\Delta x) - f(x_0) = f'(x_0)\\Delta x + a(\\Delta x)\\Delta x\\to 0 \\Rightarrow f(x_0 + \\Delta x) \\to f(x_0) $, т.е. функция непрерывна в точке $ x_0 $"
    ]
   },
   {
