--- a/Calculus/1st-Semester/Exam/22. Первый дифференциал функции.ipynb
+++ b/Calculus/1st-Semester/Exam/22. Первый дифференциал функции.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "### Определение 2\n",
     "\n",
-    "Пусть $ H $ лежит на касательной, проведённой к графику $ y = f(x) $ в точке $ M $; абсцисса точки $ H $ равна $ x_0 + \\Delta x $. Тогда ордината $ y_H = f'(x_0)(x_H - x_0) + f(x_0) = f'(x_0)\\Delta x + f(x_0) \\Rightarrow H(x_0 + \\Delta x, f'(x_0)\\Delta x + f(x_0)) $. Тогда $ NP = f(x + \\Delta x) - f(x_0) = \\Delta x $ - приращение функции. $ HP = f'(x_0)\\Delta x + f(x_0) - f(x_0) = f'(x_0) \\Delta x $ - дифференциал функции $ f $. Таким образом, геометрический дифференциал - это приращение касательной, соответсвующее приращению фргумента $ \\Delta x $.\n",
+    "Пусть $ H $ лежит на касательной, проведённой к графику $ y = f(x) $ в точке $ M $; абсцисса точки $ H $ равна $ x_0 + \\Delta x $. Тогда ордината $ y_H = f'(x_0)(x_H - x_0) + f(x_0) = f'(x_0)\\Delta x + f(x_0) \\Rightarrow H(x_0 + \\Delta x, f'(x_0)\\Delta x + f(x_0)) $. Тогда $ NP = f(x + \\Delta x) - f(x_0) = \\Delta f $ - приращение функции. $ HP = f'(x_0)\\Delta x + f(x_0) - f(x_0) = f'(x_0) \\Delta x $ - дифференциал функции $ f $. Таким образом, геометрический дифференциал - это приращение касательной, соответсвующее приращению фргумента $ \\Delta x $.\n",
     "\n",
     "Замечение: 1) Поскольку $ \\Delta f = df + \\overline{o}(\\Delta x), \\Delta x \\to 0 $, то $ \\frac{\\Delta f - df}{\\Delta x} = \\overline{o}(0), \\Delta x \\to 0 \\Rightarrow \\Delta f = df $ при малых $ \\Delta x $."
    ]
