--- a/Calculus/1st-Semester/Exam/23. Производные и дифференциалы высших порядков, формула Лейбница.ipynb
+++ b/Calculus/1st-Semester/Exam/23. Производные и дифференциалы высших порядков, формула Лейбница.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "1. $ (e^x)^{(n)} = e^x; (a^x)^{(n)} = (ln \\ a)^{(n)} \\cdot a^x $  \n",
     "\n",
-    "2. $ (x^\\alpha)^{(n)} = \\alpha \\cdot (\\alpha - 1) \\dots (\\alpha - n + n) x^{\\alpha - n} $. В частности, пусть $ m \\in \\mathbb{N} $. Тогда $$ (x^m)^{(n)} = \\begin{cases} \\frac{m!}{(n - m)!}x^{m - n} &, n \\leqslant m \\\\ 0 &, n > m \\end{cases} $$  \n",
+    "2. $ (x^\\alpha)^{(n)} = \\alpha \\cdot (\\alpha - 1) \\dots (\\alpha - n + 1) x^{\\alpha - n} $. В частности, пусть $ m \\in \\mathbb{N} $. Тогда $$ (x^m)^{(n)} = \\begin{cases} \\frac{m!}{(n - m)!}x^{m - n} &, n \\leqslant m \\\\ 0 &, n > m \\end{cases} $$  \n",
     "\n",
     "3. $ (ln \\ x)^{(n)} = \\frac{(-1)^{n - 1} (n - 1)!}{x^n} $  \n",
     "$ \\dots $"
@@ -171,7 +171,7 @@
     "\n",
     "$ f'(x_0) = \\frac{df}{dx}|_{x = x_0} = \\frac{\\psi'(t_0)dt}{\\phi'(t_0)dt} = \\frac{\\psi'(t_0)}{\\phi'(t_0)} $  \n",
     "\n",
-    "$ f''(x_0) = (f'(x))' |_{x = x_0} = (\\frac{\\psi'(t_0)}{\\phi'(t_0)})' |_{x = x_0} = (\\frac{\\psi'(t_0)}{\\phi'(t_0)})_t' \\cdot t_x'|_{x = x_0} = \\frac{\\psi''(t_0)\\phi'(t_0) - \\psi'(t_0)\\phi''(t_0)}{(\\phi'(t_0))^2} \\cdot \\frac{1}{\\phi'(x)} = \\frac{\\psi''(t_0)\\phi'(t_0) - \\psi'(t_0)\\phi''(t_0)}{(\\phi'(t_0))^3}$"
+    "$$ f''(x_0) = (f'(x))' |_{x = x_0} = (\\frac{\\psi'(t_0)}{\\phi'(t_0)})' |_{x = x_0} = (\\frac{\\psi'(t_0)}{\\phi'(t_0)})_t' \\cdot t_x'|_{x = x_0} = \\frac{\\psi''(t_0)\\phi'(t_0) - \\psi'(t_0)\\phi''(t_0)}{(\\phi'(t_0))^2} \\cdot \\frac{1}{\\phi'(x)} = \\frac{\\psi''(t_0)\\phi'(t_0) - \\psi'(t_0)\\phi''(t_0)}{(\\phi'(t_0))^3}$$"
    ]
   }
  ],
