--- a/Calculus/1st-Semester/Exam/24. Понятие возрастания (убывания) в точке и локального экстремума функции.ipynb
+++ b/Calculus/1st-Semester/Exam/24. Понятие возрастания (убывания) в точке и локального экстремума функции.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "Пусть $ f'(x_0) > 0 $. Полодим в определение производной через предел $ \\varepsilon = \\frac{f'(x_0)}{2} $. Тогда $ \\exists \\sigma > 0, \\forall x \\in \\dot B_\\delta (x_0): |\\frac{f(x) - f(x_0)}{x - x_0}  -f'(x_0)| < \\frac{f'(x_0)}{2} \\Rightarrow \\frac{f(x) - f(x_0)}{x - x_0} > frac{f'(x_0)}{2} > 0 \\forall x \\in \\dot B_\\sigma(x_0) $/. Значит $ f(x) - f(x_0) $ и $ x - x_0 $ имеют одинаковый знак и $ f $ возрастает в точке $ x_0 $."
+    "Пусть $ f'(x_0) > 0 $. Полодим в определение производной через предел $ \\varepsilon = \\frac{f'(x_0)}{2} $. Тогда $ \\exists \\sigma > 0, \\forall x \\in \\dot B_\\delta (x_0): |\\frac{f(x) - f(x_0)}{x - x_0}  -f'(x_0)| < \\frac{f'(x_0)}{2} \\Rightarrow \\frac{f(x) - f(x_0)}{x - x_0} > \\frac{f'(x_0)}{2} > 0 \\forall x \\in \\dot B_\\sigma(x_0) $/. Значит $ f(x) - f(x_0) $ и $ x - x_0 $ имеют одинаковый знак и $ f $ возрастает в точке $ x_0 $."
    ]
   },
   {
