--- a/Calculus/1st-Semester/Exam/29. Формула Тейлора с остаточным членом в общей форме (в форме Шлемильха-Роша).ipynb
+++ b/Calculus/1st-Semester/Exam/29. Формула Тейлора с остаточным членом в общей форме (в форме Шлемильха-Роша).ipynb
@@ -36,19 +36,19 @@
     "\n",
     "Пусть $ x \\in [a, a + \\delta) $ (случай $ x < a $ доказывается аналогично). Рассмотрим функцию  \n",
     "\n",
-    "$$ F(t) = f(x) - \\varphi_n(t, x) - (x - t)^p \\cdot Q_{n + 1}(x), \\space\\space\\space\\space a \\leqslant t \\leqslant x $$\n",
+    "$$ \\psi(t) = f(x) - \\varphi_n(x, t) - (x - t)^p \\cdot Q_{n + 1}(x), \\space\\space\\space\\space a \\leqslant t \\leqslant x $$\n",
     "\n",
     "где $ Q_{n + 1}(x) = \\frac{R_{n + 1}(x)}{(x - a)^p} $, так как  \n",
     "\n",
     "$$ \\varphi_n(x, t) = f(t) + \\frac{f'(t)}{1!}(x - t) + \\frac{f''(t)}{2!}(x - t)^2 + \\dots + \\frac{f^{(n)}(t)}{n!}(x - t)^n $$\n",
     "\n",
-    "а все функции $ f^{(k)}(t), k = \\overline{1, n} $ дифференцируемы на промежутке $ [a, a + \\delta) $, то можем утверждать, что функция $ \\psi(t) $ непрерывна и дифференцируема на сегменте $ [a, x] $ (как композиция дифференцируемых функций и многочленов). Кроме того, $ \\psi(a) = f(x) - \\varphi_n(x, a) - R_{n + 1}(x) = 0; \\space\\space \\psi(x) = f(x) - \\varphi_n(x, x) = f(x) - f(x) = 0 \\Rightarrow \\exists \\xi = \\xi(x, p) \\in (a, x): \\space \\psi'(x) = 0 $ (по теореме Ролля). Вычислим: \n",
+    "а все функции $ f^{(k)}(t), k = \\overline{1, n} $ дифференцируемы на промежутке $ [a, a + \\delta) $, то можем утверждать, что функция $ \\psi(t) $ непрерывна и дифференцируема на сегменте $ [a, x] $ (как композиция дифференцируемых функций и многочленов). Кроме того, $ \\psi(a) = f(x) - \\varphi_n(x, a) - R_{n + 1}(x) = 0; \\space\\space \\psi(x) = f(x) - \\varphi_n(x, x) = f(x) - f(x) = 0 \\Rightarrow \\exists \\xi = \\xi(x, p) \\in (a, x): \\space \\psi'(\\xi) = 0 $ (по теореме Ролля). Вычислим: \n",
     "\n",
-    "$$ \\psi'(x) = -(\\varphi_n(x, t))|_{t = \\xi} + p(x - \\xi)^{n + 1}Q(x) = $$\n",
+    "$$ \\psi'(x) = -(\\varphi_n(x, t))|_{t = \\xi} + p(x - \\xi)^{p - 1}Q_{n + 1}(x) = $$\n",
     "\n",
-    "$$ = -\\left( f'(\\xi) - \\frac{f'(\\xi)}{1!} + \\frac{f''(\\xi)}{1!}(x - \\xi) - \\frac {f''(\\xi)}{2!} \\cdot 2(x - \\xi) + \\frac {f'''(\\xi)}{2!} \\cdot (x - \\xi)^2 - \\frac {f'''(\\xi)}{3!} \\cdot 3 (x - \\xi)^2 + \\dots + \\frac {f^{(n + 1)}(\\xi)}{n!} \\cdot (x - \\xi)^n \\right) + $$\n",
+    "$$ = -\\left( f'(\\xi) - \\frac{f'(\\xi)}{1!} + \\frac{f''(\\xi)}{1!}(x - \\xi) - \\frac {f''(\\xi)}{2!} \\cdot 2(x - \\xi) + \\frac {f'''(\\xi)}{2!} \\cdot (x - \\xi)^2 - \\frac {f'''(\\xi)}{3!} \\cdot 3 (x - \\xi)^2 + \\dots - \\frac {f^{(n + 1)}(\\xi)}{n!} \\cdot (x - \\xi)^n \\right) + $$\n",
     "\n",
-    "$$ p(x - \\xi)^{p - 1}Q(x) = -\\frac{f^{(n + 1)}(\\xi)}{n!}(x - \\xi)^n + p(x - \\xi)^{p - 1}Q(x) $$\n",
+    "$$ + p(x - \\xi)^{p - 1}Q(x) = -\\frac{f^{(n + 1)}(\\xi)}{n!}(x - \\xi)^n + p(x - \\xi)^{p - 1}Q(x) $$\n",
     "\n",
     "Так как $ \\psi'(x) = 0 $, то получаем, что \n",
     "\n",
