--- a/Calculus/1st-Semester/Exam/33. Простейшие методы интегрирования.ipynb
+++ b/Calculus/1st-Semester/Exam/33. Простейшие методы интегрирования.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "#### Замена переменной\n",
     "\n",
-    "Пусть функция $ \\varphi:T \\to X, T = (\\alpha, \\beta), \\varphi $ непрерывно дифферециируема на $ T $; $ f $ определена на $ X = (a, b) $. Если $ f $ имеет на $ X $ непрерывную $ F $, то функция $ f(\\varphi)\\varphi' $ имеет первообразную на $ T $, причём $ \\int f(x)dx = \\int f(\\varphi(t))\\varphi(t)dt $  \n",
+    "Пусть функция $ \\varphi:T \\to X, T = (\\alpha, \\beta), \\varphi $ непрерывна и дифферециируема на $ T $; $ f $ определена на $ X = (a, b) $. Если $ f $ имеет на $ X $ непрерывную $ F $, то функция $ f(\\varphi)\\varphi' $ имеет первообразную на $ T $, причём $ \\int f(x)dx = \\int f(\\varphi(t))\\varphi(t)dt $  \n",
     "\n",
     "#### Доказательство  \n",
     "\n",
