--- a/Calculus/1st-Semester/Exam/34. Интегрируемость в элементарных функциях класса рациональных дробей.ipynb
+++ b/Calculus/1st-Semester/Exam/34. Интегрируемость в элементарных функциях класса рациональных дробей.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "   $ I_1 = \\int \\! \\frac{2x + p}{(x^2 + px + q)^m} = \\cdots = \\frac{1}{(1 - m)(x^2 + px + q)^{m - 1}} + C $  \n",
     "   \n",
-    "   $ I_2(m) = \\int \\! \\frac{dx}{(x^2 + px + q)^m} = \\left| \\begin{align}t = x + \\frac{p}{2} \\newline a^2 = q - p^24 \\end{align} \\right| = \\int \\! \\frac{dt}{(t^2 + a^2)^m} = \\frac{1}{a^2} \\int \\! \\frac{t^2 + a^2 - t^2}{(t^2 + a^2)^m}dt = \\frac{1}{a^2} I_2(m - 1) - \\frac{1}{a^2}\\int \\! t d \\left( \\frac{1}{2(1 - m)}  \\frac{1}{(t^2 + a^2)^{m - 1}} \\right) =  $\n",
+    "   $ I_2(m) = \\int \\! \\frac{dx}{(x^2 + px + q)^m} = \\left| \\begin{align}t = x + \\frac{p}{2} \\newline a^2 = 4q - p^2 \\end{align} \\right| = \\int \\! \\frac{dt}{(t^2 + a^2)^m} = \\frac{1}{a^2} \\int \\! \\frac{t^2 + a^2 - t^2}{(t^2 + a^2)^m}dt = \\frac{1}{a^2} I_2(m - 1) - \\frac{1}{a^2}\\int \\! t d \\left( \\frac{1}{2(1 - m)}  \\frac{1}{(t^2 + a^2)^{m - 1}} \\right) =  $\n",
     "   \n",
     "   $ = \\frac{1}{a^2} I_2(m - 1) + \\frac{t}{2a^2(m - 1)(a^2 + t^2)^{m - 1}} - \\frac{1}{2(m - 1)a^2} \\int \\frac{dt}{(t^2 + a^2)^{m - 1}} = \\frac{t}{2a^2(m - 1)(a^2 + t^2)^{m - 1}} + \\frac{2m - 3}{2a^2(m - 1)} I_2(m - 1) $\n",
     "   \n",
