--- a/Calculus/1st-Semester/Exam/21. Правила дифференцирования.ipynb
+++ b/Calculus/1st-Semester/Exam/21. Правила дифференцирования.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "$ h = f \\pm g \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{\\Delta f \\pm \\Delta g}{\\Delta x} = \\frac{\\Delta f}{\\Delta x} \\pm \\frac{\\Delta g}{\\Delta x} \\to f(x) \\pm g(x)$\n",
+    "$$ h = f \\pm g \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{\\Delta f \\pm \\Delta g}{\\Delta x} = \\frac{\\Delta f}{\\Delta x} \\pm \\frac{\\Delta g}{\\Delta x} \\to f(x) \\pm g(x)$$\n",
     "\n",
-    "$ h = fg \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{f(x_0 + \\Delta x)g(x_0  +\\Delta x) - f(x_0)g(x_0)}{\\Delta x} = \\frac{f(x_0 + \\Delta x)g(x_0  +\\Delta x) - f(x_0)g(x_0 + \\Delta x)}{\\Delta x} + \\frac{f(x_0)g(x_0  +\\Delta x) - f(x_0)g(x_0)}{\\Delta x} = \\frac{\\Delta f}{\\Delta x}g(x_0 + \\Delta x) + f(x_0)\\frac{\\Delta g}{\\Delta x} \\to f'(x_0)g(x_0) + f(x_0)g(x_))  $\n",
+    "$$ h = fg \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{f(x_0 + \\Delta x)g(x_0  +\\Delta x) - f(x_0)g(x_0)}{\\Delta x} = \\frac{f(x_0 + \\Delta x)g(x_0  +\\Delta x) - f(x_0)g(x_0 + \\Delta x)}{\\Delta x} + \\frac{f(x_0)g(x_0  +\\Delta x) - f(x_0)g(x_0)}{\\Delta x} = \\frac{\\Delta f}{\\Delta x}g(x_0 + \\Delta x) + f(x_0)\\frac{\\Delta g}{\\Delta x} \\to f'(x_0)g(x_0) + f(x_0)g(x_))  $$\n",
     "\n",
-    "$ h = \\frac{f}{g} \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{\\frac{f(x_0 + \\Delta x)}{g(x_0 + \\Delta x)} - \\frac{f(x_0)}{g(x_0)}}{\\Delta x} = \\frac{f(x_0 + \\Delta x) g(x_0) - f(x_0) g(x_0 + \\Delta x)}{g(x_0 + \\Delta x) g(x_0) \\Delta x} = \\frac{1}{g(x_0 + \\Delta x) g(x_0)} \\left( \\frac{f(x_0 + \\Delta x) g(x_0) - f(x_0)g(x_0)}{\\Delta x} - \\frac{f(x_0) g(x_0 + \\Delta x) - f(x_0)g(x_0)}{\\Delta x} \\right) \\to \\frac{1}{g^2(x_0)} \\left( f'(x_0)g(x_0) - g'(x_0)f(x_0) \\right) = \\frac{f'(x_0)g(x_0) - f(x_0)g'(x_0)}{g^2(x_0)} $"
+    "$$ h = \\frac{f}{g} \\Rightarrow \\frac{\\Delta h}{\\Delta x} = \\frac{\\frac{f(x_0 + \\Delta x)}{g(x_0 + \\Delta x)} - \\frac{f(x_0)}{g(x_0)}}{\\Delta x} = \\frac{f(x_0 + \\Delta x) g(x_0) - f(x_0) g(x_0 + \\Delta x)}{g(x_0 + \\Delta x) g(x_0) \\Delta x} = \\frac{1}{g(x_0 + \\Delta x) g(x_0)} \\left( \\frac{f(x_0 + \\Delta x) g(x_0) - f(x_0)g(x_0)}{\\Delta x} - \\frac{f(x_0) g(x_0 + \\Delta x) - f(x_0)g(x_0)}{\\Delta x} \\right) \\to \\frac{1}{g^2(x_0)} \\left( f'(x_0)g(x_0) - g'(x_0)f(x_0) \\right) = \\frac{f'(x_0)g(x_0) - f(x_0)g'(x_0)}{g^2(x_0)} $$"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "Пусть $ \\Delta x \\in \\mathbb{R} \\backslash \\{0\\}, x_0 + \\Delta x = B_\\delta(x_0) $. По теореме об обратной функции в некоторой окрестности точки $ y_0 = f(x_0) $ существует обратная функция $ f^{-1}(y) $. Полодим $ \\Delta y = f(x_0 + \\Delta x) - f(x_0) $ю Тогда $ \\Delta y \\neq 0 $ ( $ f $ строгомонотонна), причём $ f^{-1}(y_0 + \\Delta y) - f^{-1}(y_0) = f^{-1}(f(f(x_0) + x_0 + \\Delta x) - f(x_0)) - x_0 = f^{-1}(f(x_0 + \\Delta x)) - x_0 = x_0 + \\Delta x - x_0 = \\Delta x $  \n",
+    "Пусть $ \\Delta x \\in \\mathbb{R} \\backslash \\{0\\}, x_0 + \\Delta x = B_\\delta(x_0) $. По теореме об обратной функции в некоторой окрестности точки $ y_0 = f(x_0) $ существует обратная функция $ f^{-1}(y) $. Полодим $ \\Delta y = f(x_0 + \\Delta x) - f(x_0) $ю Тогда $ \\Delta y \\neq 0 $ ( $ f $ строгомонотонна), причём $ f^{-1}(y_0 + \\Delta y) - f^{-1}(y_0) = f^{-1}(f(x_0) +f( x_0 + \\Delta x) - f(x_0) - x_0 = f^{-1}(f(x_0 + \\Delta x)) - x_0 = x_0 + \\Delta x - x_0 = \\Delta x $  \n",
     "\n",
     "Значит $(f^{-1}(y))'_{y = y_0} = \\lim\\limits_{\\Delta y \\to 0} \\frac{\\Delta x}{\\Delta y} = \\frac{1}{\\lim\\limits_{\\Delta y \\to 0} \\frac{\\Delta y}{\\Delta x}} = \\frac{1}{f'(x)}$"
    ]
