Added lectures in calculus

--- a/Calculus/1st-Semester/Lectures/28.ipynb
+++ b/Calculus/1st-Semester/Lectures/28.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Иррациональные выражения\n",
+    "#### Иррациональные выражения\n",
     "\n",
     "1. $ I = \\int \\! R(x, \\sqrt[m]{\\frac{\\alpha x + \\beta}{\\gamma x + \\delta}})dx, $ где $ \\begin{align} &\\alpha, \\beta, \\gamma, \\delta \\in \\mathbb{R} \\\\ &\\alpha \\delta - \\beta \\gamma \\neq 0 \\end{align} $  \n",
     "\n",
@@ -88,8 +88,8 @@
     "\n",
     "3. Интегрирование дифференциальных биномов (подстановка Чебышёва)  \n",
     "   I = $ \\int \\! x^m(a + bx^n)^pdx, m, n, p \\in \\mathbb{Q} $  \n",
-    "   а) $ p \\int \\mathbb{Z} $. Подстановка $ x = t^N, N $ - общий знаменатель дробей $ m, n \\Rightarrow i = \\int \\! R(t)dt $  \n",
-    "   б) $ \\frac{m + 1}{n} \\ in \\mathbb{Z} $. Подстановка $ a + bx^n = t^N, N $ - знаменатель дроби $ p \\Rightarrow x = \\left(\\frac{t^N - a}{b}\\right)^\\frac{1}{t}, dx = \\frac{1}{b^{\\frac{1}{n}}} \\frac{1}{n}\\left(t^N - a \\right)^{\\frac{1}{N} - 1}\\cdot N \\cdot t^{N - 1}dt $  \n",
+    "   а) $ p \\in \\mathbb{Z} $. Подстановка $ x = t^N, N $ - общий знаменатель дробей $ m, n \\Rightarrow i = \\int \\! R(t)dt $  \n",
+    "   б) $ \\frac{m + 1}{n} \\in \\mathbb{Z} $. Подстановка $ a + bx^n = t^N, N $ - знаменатель дроби $ p \\Rightarrow x = \\left(\\frac{t^N - a}{b}\\right)^\\frac{1}{t}, dx = \\frac{1}{b^{\\frac{1}{n}}} \\frac{1}{n}\\left(t^N - a \\right)^{\\frac{1}{N} - 1}\\cdot N \\cdot t^{N - 1}dt $  \n",
     "   $ \\cdots $"
    ]
   },
