--- a/Calculus/2nd-Semester/Lectures/1.ipynb
+++ b/Calculus/2nd-Semester/Lectures/1.ipynb
@@ -183,6 +183,67 @@
     "\n",
     "Пусть $ T' = T_1 \\cup T_2 $. Тогда $  s(T_1) \\leqslant $ (по лемме 3) $ s(T') \\leqslant $ (по определению) $ S(T') \\leqslant $ (по лемме 3) $ (T_2) $"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Определение 8\n",
+    "\n",
+    "Верхниё (нижний) интеграл Дарбу для функции $ f $ называются $ I^* = \\underset{T}{\\sup} S(T) \\space\\space (I_* = \\underset{T}{\\inf} s(T)) $, где точные грани берутся по всем возможным разбиениям $ T $ отрезка $ [a, b] $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Лемма 5\n",
+    "\n",
+    "Пусть $ f $ ограничена на $ [a, b] $. Тогда $ I_*, I^* $ существуют, причём $ I_* \\leqslant I^* $\n",
+    "\n",
+    "### Доказательство\n",
+    "\n",
+    "Для любого разбиения $ T: S(T) = \\sum_{i = 1}^n\\limits M_i \\Delta x_i \\geqslant m \\sum_{i = 1}^n\\limits \\Delta x_i = m (b - a) \\Rightarrow $ множество $ \\{ S(t) \\} $ ограничено снизу $ \\Rightarrow \\exists \\underset{T}{\\inf} \\{ S(T) \\} = I_* $. Аналогично для верхней грани.\n",
+    "\n",
+    "Доказательство неравенства. Предположим, что $ I_* > i^* $. Обозначим $ \\varepsilon = \\frac{I_* - I^*}{2} > 0. \\space I^* = \\underset{T}{\\inf} \\{ S(T) \\} \\Rightarrow \\exists T_2 $ - разбиение $ [a, b] $, т.ч. $ S(T_1) < I^8 + \\varepsilon = \\frac{I_* + I^*}{2} $. Аналогично $ \\exists T_2 $ - разбиение, т.ч. $ S(T_2) > I_* - \\varepsilon = \\frac{I_* + I^*}{2} $. Получаем, что $ S(T_1) < \\frac{I_* + I^*}{2} < S(T_2) $. Противоречие с леммой 4. Значит $ I_* \\leqslant I^* $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Лемма 6. Основная лемма Дарбу\n",
+    "\n",
+    "$ I^* = \\underset{\\Delta_t \\to 0}{\\lim} S(T) \\space\\space (I_* = \\underset{\\Delta_t \\to 0}{\\lim} s(T)) $, т.е. $ \\forall \\varepsilon > 0 \\space \\exists \\delta(\\varepsilon) > 0 $, т.ч. $ \\forall T $ - разбиение $ [a, b], \\Delta_T < \\delta: \\space |S(T) - I^*| < \\varepsilon \\space\\space (|I_* - s(T)| < \\varepsilon) $\n",
+    "\n",
+    "### Доказательство\n",
+    "\n",
+    "Докажем, что $ I^* = \\underset{\\Delta_t \\to 0}{\\lim} S(T) $. Возьмём $ \\varepsilon > 0. \\space\\space I^* = \\underset{T}{\\inf} \\{ S(T) \\} \\Rightarrow \\exists T^* $ - разбиение $ [a, b] $, т.ч. $ 0 \\leqslant S(T^*) - I^* < \\frac{\\varepsilon}{2} $. Пусть $ T* = \\{ x^*_{0}, x^*_{1}, \\dots, x^*_{k - 1}, x^*_{k} \\} $. Если $ m = M $, то $ f $ постоянна на $ [a, b] $, тогда $ s(t) = I_* = I^* = S(T) $ и утверждение леммы очевидно. Пусть $ m < M $. Положим $ \\sigma = \\frac{\\varepsilon}{2 (M - m) (k - 1)} $. Пусть $ T = \\{ x_0, x_1, \\dots, x_n \\} $ - произвольное разбиение $ [a, b], \\Delta_t < \\sigma $. Обозначим $ T' = T \\cup T^* $, тогда $ 0 \\leqslant S(T) - S(T') \\leqslant (M - m) \\cdot (k - 1) \\cdot \\Delta_t < (M - m)(k - 1)\\sigma = \\frac{\\varepsilon}{2} $.  \n",
+    "Отсюда $ 0 \\leqslant S(T) - I^* = S(T)  -S(T') + S(T') - I^* < \\frac{\\varepsilon}{2} + S(T^*) - I^* < \\varepsilon $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Теорема 2. Критерий Римана интегрируемрсти функции\n",
+    "\n",
+    "Пусть $ f $ определена и ограничена на $ [a, b]. \\space\\space f \\in R[a, b] \\Leftrightarrow \\forall \\varepsilon > 0 \\space\\space \\exists T $ - разбиение $ [a, b] $, т.ч. $ 0 \\leqslant S(T) - s(T) < \\varepsilon $\n",
+    "\n",
+    "### Доказательство\n",
+    "\n",
+    "$ \\Rightarrow | $ Пусть $ f \\in R[a, b], \\space I = \\int_a^b\\limits f(x)dx $. Возьмём $ \\varepsilon > 0 $. По определению интеграла $ \\exists \\delta(\\varepsilon) > 0: \\forall V $ - размеченное разбиение $ [a, b], \\space \\Delta_V < \\delta: \\space |I - \\sigma(V)| < \\frac{\\varepsilon}{3} \\Rightarrow I - \\frac{\\varepsilon}{3} < \\sigma(V) < I + \\frac{\\varepsilon}{3} $. Из лемма 2 следует, что $ S(T) = \\underset{V}{\\sup} \\{ \\sigma(V) \\}, \\space s(T) = \\underset{V}{\\inf} \\{ \\sigma(V) \\} \\Rightarrow I - \\frac{\\varepsilon}{3} \\leqslant S(T) \\leqslant I + \\frac{\\varepsilon}{3}, I - \\frac{\\varepsilon}{3} \\leqslant s(T) \\leqslant I + \\frac{\\varepsilon}{3} $, где $ T $ - неразмеченное разбиение, соответствующее $ V $ (т.е. $ \\forall $ неразмеченного разбиения, $ \\Delta_T < \\delta $). Значит, $ 0 \\leqslant S(T) - s(T) < \\frac{2\\varepsilon}{3} < \\varepsilon $\n",
+    "\n",
+    "$ \\Leftarrow | $ Из определения и леммы 5 следует, что $ \\forall T $ - разбиения $ [a, b]: s(T) \\leqslant I_* \\leqslant I^* \\leqslant S(T) $. Тогда по условию $ \\forall \\varepsilon > 0 \\space\\space \\exists T $ - разбиение $ [a, b] $, т.ч. $ 0 \\leqslant I^* - I_* \\leqslant S(T) - s(T) < \\varepsilon $. значит $ I^* = I_* = I $ (поскольку верхний и нижний интегралы Дарбу не зависят от разбиения)/ Отсюда и из леммы 6 следует, что $ \\underset{\\Delta_t \\to 0}{\\lim} S(T) = \\underset{\\Delta_t \\to 0}{\\lim} s(T) $. Возьмём произвольное $ \\varepsilon > 0 $. Тогда $ \\exists \\delta(\\varepsilon) > 0 $, т.ч. $ \\forall T, \\Delta_t < \\delta, 0 \\leqslant S(T) - s(T) < \\varepsilon $\n",
+    "\n",
+    "Далее $ s(T) \\leqslant I \\leqslant S(T), s(T) \\leqslant \\sigma(V) \\leqslant S(T) $, где $ V $ - произвольное размеченное разбиение, соответствующее $ T $. Значит $ \\forall V $ - размеченного разбиения, $ \\Delta_V < \\delta: \\space |I - \\sigma(V)| < \\varepsilon \\Rightarrow f \\in R[a, b] $\n",
+    "\n",
+    "### Замечание\n",
+    "\n",
+    "Фактически доказали ещё одно утверждение - критерий Дарбу интрегрируемости функции: пусть $ f $ определена на $ [a, b]. f() \\in R[a, b] \\Leftrightarrow I_* = I^* $\n",
+    "\n",
+    "2. Колебание функции на отрезке $ [x_{k - 1}, x_k]. \\space\\space \\omega_k = M_k - m_k $. Тогда можно записать $ S(T) - s(T) = \\sum_{k = 1}^n\\limits \\omega_k \\cdot \\Delta x_k $."
+   ]
   }
  ],
  "metadata": {
