Added tickets 29 and 30

--- a/Algebra-and-Geometry/2nd-Semester/Colloquium/02.ipynb
+++ b/Algebra-and-Geometry/2nd-Semester/Colloquium/02.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Два линейных пространства $ V_1, V_2 $ над обзим полем $ P $ называютяс изоморфными, если существует биективное отображение $ \\varphi: V_1 \\to V_2 $, которое сохраняет законы композиции: $ \\forall x, y \\in V_1, \\space \\alpha \\in P $\n",
+    "Два линейных пространства $ V_1, V_2 $ над обзим полем $ P $ называются изоморфными, если существует биективное отображение $ \\varphi: V_1 \\to V_2 $, которое сохраняет законы композиции: $ \\forall x, y \\in V_1, \\space \\alpha \\in P $\n",
     "1. $ \\varphi(x + y) = \\varphi(a) + \\varphi(b) $\n",
     "2. $ \\varphi(\\alpha x) = \\alpha \\varphi(a) $  \n",
     "\n",
@@ -40,7 +40,7 @@
     "    - образ и прообраз линейно независимой системы векторов образует линейно независимую систему векторов\n",
     "    - образ и прообраз базиса есть базис\n",
     "\n",
-    "Доказательства опирабтся на определения и свойства рассматриваемых структур."
+    "Доказательства опираются на определения и свойства рассматриваемых структур."
    ]
   },
   {
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Изоморфизм, построенный при доказательстве теоремы - изоморфиззм, переводящий базис в базис - называется координатным изоморфизмом, определённым базисом $ e_1, \\dots, e_n $. Координатный изоморфизм \"заменяет\" линейное пространство конкретным арифметическим пространством и сводит решение многих задач к вычислениям в поле."
+    "Изоморфизм, построенный при доказательстве теоремы - изоморфизм, переводящий базис в базис - называется координатным изоморфизмом, определённым базисом $ e_1, \\dots, e_n $. Координатный изоморфизм \"заменяет\" линейное пространство конкретным арифметическим пространством и сводит решение многих задач к вычислениям в поле."
    ]
   }
  ],
