--- a/Algebra-and-Geometry/2nd-Semester/Colloquium/13.ipynb
+++ b/Algebra-and-Geometry/2nd-Semester/Colloquium/13.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Это линейное отображение также называют линейным преобразованием пространства $ V $ в пространство $ W $ или линейным оператором, действующим из пространства $ V $ в пространство $ W $.\n",
     "\n",
-    "Если $ W $, то такое отображение называют линейным функционалом или линейной формой в протранстве $ V $."
+    "Если $ W = P $, то такое отображение называют линейным функционалом или линейной формой в протранстве $ V $."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "### Простейшие свойства\n",
     "\n",
-    "1. Линейны оператор переводит нулевой вектор в нулевой вектор:\n",
+    "1. Линейный оператор переводит нулевой вектор в нулевой вектор:\n",
     "   $ \\mathcal A \\theta_1 = \\mathcal A 0x = 0 \\mathcal A x = \\theta_2, \\space \\theta_1 \\in V, \\theta_2 \\in W $\n",
     "2. Линейный оператор сохраняет линейные комбинации:\n",
     "   $ \\mathcal A (\\sum_{i = 1}^k \\alpha_i x_i) = \\sum_{i = 1}^k \\alpha_i \\mathcal A x_i $\n",
@@ -52,7 +52,7 @@
    "source": [
     "### Теорема 76.1\n",
     "\n",
-    "Пусть $ e_1, \\dots, e_n $ - базис пространства $ V $, а $ g_1, \\dots, g_n $ - произвольные векторы пространства $ W $. Тогда $ \\exists ! \\mathcal A \\in \\mathcal L(V, W) $, который переводит веторы $ e_1, \\dots, e_n $ в векторы $ g_1, \\dots, g_n $ соотвественно.\n",
+    "Пусть $ e_1, \\dots, e_n $ - базис пространства $ V $, а $ g_1, \\dots, g_n $ - произвольные векторы пространства $ W $. Тогда $ \\exists ! \\mathcal A \\in \\mathcal L(V, W) $, который переводит векторы $ e_1, \\dots, e_n $ в векторы $ g_1, \\dots, g_n $ соотвественно.\n",
     "\n",
     "### Доказательство\n",
     "\n",
