--- a/Algebra-and-Geometry/2nd-Semester/Colloquium/15.ipynb
+++ b/Algebra-and-Geometry/2nd-Semester/Colloquium/15.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "### Теорема 78.3\n",
     "\n",
-    "Если $ \\dim V = n, \\dim W = m $, то линейное пространство $ \\mathcal L(V, W) $ изоморфно протсранству матриц $ P^{m \\times n} $\n",
+    "Если $ \\dim V = n, \\dim W = m $, то линейное пространство $ \\mathcal L(V, W) $ изоморфно пространству матриц $ P^{m \\times n} $\n",
     "\n",
     "### Доказательство\n",
     "\n",
